# coding-fun

./: .gitignore  README.md  pyproject.toml
Codewars/3kyu/message_decoder/: README.md  brute_force.py  decryption.py
Codewars/4kyu/Knight_move/: README.md  shortest_knight_move.py
Codewars/4kyu/Sum_of_intervals/: README.md  SumIntervals.sc  sum_of_intervals.py
Codewars/4kyu/Vignere_Cipher/: README.md  vignere_cypher.py
Codewars/4kyu/human_readable_duration_format/: README.md  human_readable_duration_format.py
Codewars/5kyu/human_readable_time/: README.md  human_readable_time.worksheet.sc
Codewars/5kyu/mean_square_error/: README.md  Sol.scala
Codewars/6kyu/ip_validation/: README.md  ip_validation.py  ip_validation.sh
learn-zig/: build.zig  build.zig.zon
learn-zig/src/: main.zig  root.zig
learn-zig/src/cyphers/: caesar.zig  utils.zig  vignere.zig
scripts/: cli.py  kata.py
scripts/templates/: kata_readme.template
scripts/utils/: kata.py
utils/: cli.py  kata.py
utils/utils/: kata.py
