[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "coding-utils"
version = "0.1.0"
description = "A collection of utilities for coding tasks"
readme = "README.md"
authors = [
    { name = "Ni3dzwi3dz", email = "jan.sikorski@niedzwiedz.blog"}
    ]
dependencies = [
    "typer==0.16.0",
    "jinja2==3.1.4",
    "beautifulsoup4==4.13.4",
    "httpx==0.28.1",
]

[project.scripts]
cf = "scripts.cli:cli"
